--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+  <meta name="description" content="{{ site.description }}">
+  <meta name="author" content="">
+  <link rel="icon" href="/favicon.ico"/>
+  <link rel="stylesheet" href="{{ page.css }}">
 
-  {% include head.html %}
+  <title>PHWash | {{ page.title }}</title>
+  <script type="text/javascript" src="/js/lib/respond.min.js"></script>
+  <script type="text/javascript" src="/js/lib/jquery-1.11.3.js"></script>
+  <script type="text/javascript" src="/js/lib/bootstrap.min.js"></script>
+  <script type="text/javascript" src="/js/lib/jquery.sticky.js"></script>
+  <script type="text/javascript" src="/js/lib/main.js"></script>
+  <script type="text/javascript" src="/js/lib/scrollReveal.min.js"></script>
 
-  <body>
+</head>
+<body id="mock">
+{{ content }}
+{% include footer.html %}
+{{ page.javascripts }}
 
-    {% include header.html %}
-
-    <div class="page-content">
-      <div class="wrapper">
-        {{ content }}
-      </div>
-    </div>
-
-    {% include footer.html %}
-
-  </body>
-
+</body>
 </html>
