--- a/_layouts/pages/home.html
+++ b/_layouts/pages/home.html
@@ -3,6 +3,6 @@ layout: default
 css: /css/home.css
 title: Home
 javascripts: >
-    <script type="text/javascript" src="/js/home.js"></script>
+    <!--<script type="text/javascript" src="/js/home.js"></script>-->
 ---
 {{ content }}
